[gd_scene load_steps=7 format=3 uid="uid://dfb4uw5hggcxf"]

[ext_resource type="Texture2D" uid="uid://bpimv4gm05nqh" path="res://Sprites/proto_pistol.png" id="1_nxj5y"]
[ext_resource type="Script" uid="uid://c44n6wxalptgw" path="res://Scripts/gun.gd" id="1_oqrbh"]

[sub_resource type="Animation" id="Animation_t6ynv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_oqrbh"]
resource_name = "reload"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="Animation" id="Animation_k4teu"]
resource_name = "shoot"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.1),
"transitions": PackedFloat32Array(2, 0.5, 0.5),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.1),
"transitions": PackedFloat32Array(2, 0.5, 0.5),
"update": 0,
"values": [Vector2(0, 0), Vector2(-0.5, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t6ynv"]
_data = {
&"RESET": SubResource("Animation_t6ynv"),
&"reload": SubResource("Animation_oqrbh"),
&"shoot": SubResource("Animation_k4teu")
}

[node name="Gun" type="Node2D"]
script = ExtResource("1_oqrbh")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(5, -2)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_nxj5y")

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_t6ynv")
}

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
